@@ -246,11 +246,8 @@ export(abbreviateTimeLabels,
        read.met,
        read.topo,
        read.netcdf,
-       read.observatory,
-       read.observatory.ctd,
        read.oce,
        read.odf,
-       read.pangaea,
        read.rsk,
        read.sealevel,
        read.section,
