@@ -1,4 +1,6 @@
 0.9-20
+- remove observatory object type (changed format, seldom-used type)
+- remove pangaea object type (undocumented format, seldom-used type)
 - improvements for BioArgo data
 - Spanish translation by Pablo Valdés
 - make read.gps() handle more files
